examples/test/testpolicy3518.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3518
  namespace: namespace58
spec:
  podSelector:
    matchLabels:
      key17: value8
      key45: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value20
          key4: value48
          key2: value15
      podSelector:
        matchLabels:
          key36: value24
